[package]
name = "powerd6_tools"
description = "A collection of tools to work with powerd6 artifacts."
version = "0.1.0"
edition = "2021"
readme = "README.md"
homepage = ""
repository = "https://github.com/powerd6/tools/"
keywords = ["powerd6", "ttrpg"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.13", features = ["derive"] }
log = "0.4.20"
simplelog = "0.12.1"
mockall = "0.12.1"

[dev-dependencies]
rstest = "0.18.2"
testdir = "0.9.1"
